--- a/school.html
+++ b/school.html
@@ -2,9 +2,11 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>school</title>
+<title>School</title>
 </head>
-
+<h1>Opleiding voor HBO5</h1>
+<img src="Bronbestanden/placeholder1.png" alt="placeholder">
+<p>Welkom op de site van de opleiding.</p>
 <body>
 </body>
 </html>
