--- a/school.html
+++ b/school.html
@@ -4,9 +4,38 @@
 <meta charset="utf-8">
 <title>School</title>
 </head>
+
+<body>
 <h1>Opleiding voor HBO5</h1>
 <img src="Bronbestanden/placeholder1.png" alt="placeholder">
 <p>Welkom op de site van de opleiding.</p>
-<body>
+<h2>Je kan volgende opleidingen bij ons volgen</h2>
+<ul>
+	<li>Bedrijf &amp; Organisatie
+		<ul>
+			<li>Boekhouder</li>
+			<li>Managemant Assistant</li>
+		</ul>
+	</li>
+	<li>Design &amp; Technologie
+		<ul>
+			<li>Bouwkundig tekenaar</li>
+			<li>Informatica-netwerkbeheerder</li>
+			<li>Informatica-Programmeur</li>
+			<li>Multimedia- &amp; informatietechnologie</li>
+		</ul>
+	</li>
+</ul>
+<h2>Locatie</h2>
+<h3>Campus Graaf K. de Goedelaan</h3>
+<p>
+	Graaf Karel de Goedelaan 5 <br />
+	8500 Kortrijk<br />
+	T 056 24 12 11<br />
+	F 056 24 12 24<br />
+	<a href="https://www.google.be/search?q=kortrijk%40howest.be&oq=kortrijk%40howest.be&aqs=chrome..69i57j69i58.10186j0j7&sourceid=chrome&ie=UTF-8">kortrijk@howest.be</a> - <a href="https://www.google.be/maps?q=kortrijk@howest.be&um=1&ie=UTF-8&sa=X&ved=0ahUKEwj92oGkjdzWAhVKK8AKHbqUCk0Q_AUICigB">routeplan</a>
+</p>
+
+
 </body>
 </html>
