--- a/school.html
+++ b/school.html
@@ -7,7 +7,7 @@
 
 <body>
 <h1>Opleiding voor HBO5</h1>
-<img src="Bronbestanden/placeholder1.png" alt="placeholder">
+<img src="Bronbestanden/logo_howest.jpg" alt="placeholder">
 <p>Welkom op de site van de opleiding.</p>
 <h2>Je kan volgende opleidingen bij ons volgen</h2>
 <ul>
