--- a/school.html
+++ b/school.html
@@ -35,7 +35,8 @@
 	F 056 24 12 24<br />
 	<a href="https://www.google.be/search?q=kortrijk%40howest.be&oq=kortrijk%40howest.be&aqs=chrome..69i57j69i58.10186j0j7&sourceid=chrome&ie=UTF-8">kortrijk@howest.be</a> - <a href="https://www.google.be/maps?q=kortrijk@howest.be&um=1&ie=UTF-8&sa=X&ved=0ahUKEwj92oGkjdzWAhVKK8AKHbqUCk0Q_AUICigB">routeplan</a>
 </p>
-
+<h1>Howest - Bereik ons via</h1>
+<img src="Bronbestanden/map.png" alt="map">
 
 </body>
 </html>
